codex-rs/tui-pty-e2e/tests/snapshots/streaming__cancelled_stream.snap
---
source: tui-pty-e2e/tests/streaming.rs
assertion_line: 76
expression: normalize_for_input_snapshot(session.screen_contents())
---
  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /approvals - choose what Codex can do without approval
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues

■ Operation 'ListCustomPrompts' is not supported in ACP mode


› testing!!!


■ Operation 'AddToHistory' is not supported in ACP mode

─ Worked for 0s ────────────────────────────────────────────────────────────────

■ Conversation interrupted - tell the model what to do differently. Something
went wrong? Hit `/feedback` to report the issue.


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
