codex-rs/tui-pty-e2e/tests/snapshots/streaming__escape_cancelled_stream.snap
---
source: tui-pty-e2e/tests/streaming.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
■ Operation 'ListCustomPrompts' is not supported in ACP mode


› testing!!!


■ Operation 'AddToHistory' is not supported in ACP mode

─ Worked for 0s ────────────────────────────────────────────────────────────────

■ Conversation interrupted - tell the model what to do differently. Something
went wrong? Report the issue at https://github.com/tilework-tech/nori-cli/issues


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
