codex-rs/tui-pty-e2e/tests/snapshots/streaming__submit_input.snap
---
source: tui-pty-e2e/tests/streaming.rs
assertion_line: 33
expression: normalize_for_input_snapshot(session.screen_contents())
---
■ Operation 'ListCustomPrompts' is not supported in ACP mode


› testing!!!


■ Operation 'AddToHistory' is not supported in ACP mode

────────────────────────────────────────────────────────────────────────────────

• Working (0s • esc to interrupt)


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
